@@ -1,3 +1,7 @@
+2004-06-21  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* gtk/gdk-event.scm (gdk-event-button:button): New function.
+
 2004-04-02  Andreas Rottmann  <a.rottmann@gmx.at>
 
 	* gtk.scm (on-get-flags): Provide default implementation returning 0.
